update: implement ordered consumers in jetstream

--- a/jetStream-ordered-consumer/package.json
+++ b/jetStream-ordered-consumer/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "nats": "^2.28.0",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
